# zx_yandex_2023

_release/: Coinz.tap  Coinz_final_yrgb.tab  Coinz_final_yrgb.tap
asm/: .gitignore  Coinz.zxprj  _const.asm  _section.asm  bullet.asm  collision.asm  data_beeper.asm  data_gfx.asm  data_intro.asm  data_levels.asm  data_pt3.asm  data_win.asm  draw.asm  enemies.asm  flying.asm  game.asm  gates.asm  input.asm  interrupt.asm  items.asm  level.asm  loader.bas  main.asm  menu.asm  music.asm  physics.asm  player.asm  sound.asm  soundfx.asm  sprites.asm  unzx7.asm
asm/beeper/: make.bat  nq-16k-game-1-new.asm  nq-16k-game-1-new.sna  nq-16k-game-1-std.asm  test1_new.asm  test1_std.asm  tritone_new.asm  tritone_std.asm
music/: make.bat  nq-16k-game-1-std.sna  test1_new.asm  test1_std.asm
proto/: .gitignore  CMakeLists.txt  bullet.c  coinz2.scr  coinz3.scr  coinz3a.scr  coinz3b.scr  data.c  data.c.scr  data_levels.h  data_levels_2.h  enemies.c  enemies.h  game.c  gametitle.scr  item.c  item.h  level.c  level.h  main.c  nq-Coinz-are-mine-final-cut.pt3  nq-Coinz-are-mine-menu.pt3  nq-Old-School-Threads.pt3  physics.c  physics.h  player.c  player.h  proto.h  sprites.c  win.scr  win2.scr
